--- a/assets/igoal-game.css
+++ b/assets/igoal-game.css
@@ -5,6 +5,11 @@ html, body {
   /* remove the extra whites around */
   font-family: 'Roboto', sans-serif;
 }
+.entirewebpage{
+      width:100%;
+      height :100%;
+       transform-origin:left center;
+  }
 
 .text-header {
   font-size: 3.5rem;
@@ -18,7 +23,9 @@ html, body {
   display: block;
   position: fixed;
 }
-
+.button{
+   justify-content: center;align-items: center;
+}
 .image-all{
   max-width: 35%;
   height: auto;
@@ -203,6 +210,7 @@ ol.progress-track li.progress-todo .icon-wrap .icon-down-arrow {
   border-left: 0.3em solid transparent;
   /* Controlls the size of the stars. */
   font-size: 6px;
+
 }
 .star:before, .star:after {
   content: "";
