--- a/assets/igoal-game.css
+++ b/assets/igoal-game.css
@@ -1,7 +1,7 @@
 html, body {
   width: 100%;
   height: 100%;
-  background: rgba(38,70,83,1);
+  background: rgb(42 157 143);
   /* remove the extra whites around */
   font-family: 'Roboto', sans-serif;
 }
@@ -10,6 +10,155 @@ html, body {
       height :100%;
        transform-origin:left center;
   }
+
+  .box {
+
+  	display: -webkit-flex;
+  	display: -ms-flexbox;
+  	display: flex;
+  	-webkit-flex-wrap: wrap;
+  	-ms-flex-wrap: wrap;
+  	flex-wrap: wrap;
+  	-webkit-justify-content: center;
+  	justify-content: center;
+    margin-top:0px
+  }
+
+
+  /* Common button styles */
+  .button1 {
+  	float: left;
+  	min-width: 150px;
+  	max-width: 250px;
+  	display: block;
+  	margin: 1em;
+  	padding: 1em 2em;
+  	border: none;
+  	background: none;
+  	color: inherit;
+  	vertical-align: middle;
+  	position: relative;
+  	z-index: 1;
+  	-webkit-backface-visibility: hidden;
+  	-moz-osx-font-smoothing: grayscale;
+  }
+  /* Text color adjustments (we could stick to the "inherit" but that does not work well in Safari) */
+
+
+  /* Sizes */
+  .button--size-s {
+  	font-size: 14px;
+  }
+  .button--size-m {
+  	font-size: 16px;
+  }
+  .button--size-l {
+  	font-size: 18px;
+  }
+
+  /* Typography and Roundedness */
+  .button--text-upper {
+  	letter-spacing: 2px;
+  	text-transform: uppercase;
+  }
+  .button--text-thin {
+  	font-weight: 300;
+  }
+  .button--text-medium {
+  	font-weight: 500;
+  }
+  .button--text-thick {
+  	font-weight: 600;
+  }
+  .button--round-s {
+  	border-radius: 5px;
+  }
+  .button--round-m {
+  	border-radius: 15px;
+  }
+  .button--round-l {
+  	border-radius: 40px;
+  }
+
+  /* Borders */
+  .button--border-thin {
+  	border: 1px solid;
+  }
+  .button--border-medium {
+  	border: 2px solid;
+  }
+  .button--border-thick {
+  	border: 3px solid;
+  }
+
+  /* Nuka */
+  .button--nuka {
+  	margin: 1em 2em;
+  	-webkit-transition: color 0.3s;
+  	transition: color 0.3s;
+  	-webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+  	transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+  }
+  .button--nuka.button--inverted {
+  	color: #2a9d8f;
+  }
+  .button--nuka::before,
+  .button--nuka::after {
+  	content: '';
+  	position: absolute;
+  	border-radius: inherit;
+  	background: #264653;
+  	z-index: -1;
+  }
+  .button--nuka::before {
+  	top: -4px;
+  	bottom: -4px;
+  	left: -4px;
+  	right: -4px;
+  	opacity: 0.2;
+  	-webkit-transform: scale3d(0.7, 1, 1);
+  	transform: scale3d(0.7, 1, 1);
+  	-webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
+  	transition: transform 0.3s, opacity 0.3s;
+  }
+  .button--nuka::after {
+  	top: 0;
+  	left: 0;
+  	width: 100%;
+  	height: 100%;
+  	-webkit-transform: scale3d(1.1, 1, 1);
+  	transform: scale3d(1.1, 1, 1);
+  	-webkit-transition: -webkit-transform 0.3s, background-color 0.3s;
+  	transition: transform 0.3s, background-color 0.3s;
+  }
+  .button--nuka::before,
+  .button--nuka::after {
+  	-webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+  	transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
+  }
+  .button--nuka.button--inverted::before,
+  .button--nuka.button--inverted::after {
+  	background: #fff;
+  }
+  .button--nuka:hover {
+  	color: #fff;
+  }
+  .button--nuka:hover::before {
+  	opacity: 1;
+  }
+  .button--nuka:hover::after {
+  	background-color: #264653;
+  }
+  .button--nuka.button--inverted:hover::after {
+  	background-color: #264653;
+  }
+  .button--nuka:hover::after,
+  .button--nuka:hover::before {
+  	-webkit-transform: scale3d(1, 1, 1);
+  	transform: scale3d(1, 1, 1);
+  }
+
+
 
 .text-header {
   font-size: 3.5rem;
