--- a/assets/igoal-game.css
+++ b/assets/igoal-game.css
@@ -49,8 +49,11 @@ html, body {
 
 
   /* Sizes */
+  .button--size-s-o {
+  	font-size: 10px;
+  }
   .button--size-s {
-  	font-size: 13px;
+    font-size: 13px;
   }
   .button--size-m {
   	font-size: 16px;
@@ -153,7 +156,7 @@ html, body {
   	background-color: #264653;
   }
   .button--nuka.button--inverted:hover::after {
-  	background-color: #264653;
+  	background-color: #2a9d8f;
   }
   .button--nuka:hover::after,
   .button--nuka:hover::before {
@@ -198,6 +201,22 @@ html, body {
   padding: 10px 0;
   color: #fff;
 } */
+#loading {position:absolute;left:calc(50% - 100px);top:calc(50% - 25px);z-index:9999}
+.uil-ripple {position:absolute;left:calc(50% - 90px);top:calc(50% - 90px);opacity:.5;z-index:999}
+
+.ld-l {opacity:0;animation: ld-in 3s 0.0s ease infinite;}
+.ld-o {opacity:0;animation: ld-in 3s 0.1s ease infinite;}
+.ld-a {opacity:0;animation: ld-in 3s 0.2s ease infinite;}
+.ld-d {opacity:0;animation: ld-in 3s 0.3s ease infinite;}
+.ld-i {opacity:0;animation: ld-in 3s 0.4s ease infinite;}
+.ld-n {opacity:0;animation: ld-in 3s 0.5s ease infinite;}
+.ld-g {opacity:0;animation: ld-in 3s 0.6s ease infinite;}
+
+@keyframes ld-in {
+  0% {opacity:0;transform:scale(0);}
+  30% {opacity:1;transform:scale(1);}
+  100% {opacity:1;transform:scale(1);}
+}
 
 .competency-profile {
   top: 0;
