--- a/assets/NFC-reader.css
+++ b/assets/NFC-reader.css
@@ -7,6 +7,7 @@
 	font-size: 16px;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
 		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+       
 }
 
 
@@ -74,7 +75,7 @@
 html {
 
     box-sizing: border-box;
-    --bgColorMenu : #1d1d27;
+    --bgColorMenu : #2a9d8f;
     --duration: .7s;
 
 }
@@ -103,16 +104,16 @@ body{
 
 .menu{
 
-    margin: 0;
+
     display: flex;
     /* Works well with 100% width  */
     width: 100%;
     font-size: 1.5em;
     padding: 0 2.85em;
-    position: relative;
-    align-items: center;
-    justify-content: center;
+    position: absolute;
+    bottom: 0%;
     background-color: var(--bgColorMenu);
+    
 
 }
 
@@ -124,7 +125,7 @@ body{
     display: flex;
     cursor: pointer;
     position: relative;
-    border-radius: 50%;
+    border-radius: 100%;
     align-items: center;
     will-change: transform;
     justify-content: center;
@@ -163,7 +164,7 @@ body{
 .icon{
 
     width: 2.6em;
-    height: 2.6em;
+    height: 3.6em;
     stroke: white;
     fill: transparent;
     stroke-width: 1pt;
