--- a/assets/karte_Nfc.css
+++ b/assets/karte_Nfc.css
@@ -1,80 +1,15 @@
-
-:root {
-	/* SIZES */
-	--max-width: 758px;
-	--max-height: 420px;
-
-	font-size: 16px;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
-
-
-
-.container {
-	background-color: container;
-	border-radius: var(--button-radius);
-	box-shadow: 0 0.9rem 1.7rem rgba(0, 0, 0, 0.25),
-		0 0.7rem 0.7rem rgba(0, 0, 0, 0.22);
-	height: var(--max-height);
-	max-width: var(--max-width);
-	overflow: hidden;
-	position: relative;
-	width: 100%;
-	height: 100%;
-}
-
-.container__form {
-	height: 100%;
-	position: absolute;
-	top: 0;
-	transition: all 0.6s ease-in-out;
-}
-
-.container--signin {
-	left: 0;
-	width: 100%;
-	z-index: 2;
-}
-
-.container.right-panel-active .container--signin {
-	transform: translateX(100%);
-}
-
-.container--signup {
-	left: 0;
-	opacity: 0;
-	width: 50%;
-	z-index: 1;
-}
-
-.container.right-panel-active .container--signup {
-	-webkit-animation: show 0.6s;
-	        animation: show 0.6s;
-	opacity: 1;
-	transform: translateX(100%);
-	z-index: 5;
-}
-
-.container__overlay {
-	height: 100%;
-	left: 50%;
-	overflow: hidden;
-	position: absolute;
-	top: 0;
-	transition: transform 0.6s ease-in-out;
-	width: 50%;
-	z-index: 100;
-}
-
-.container.right-panel-active .container__overlay {
-	transform: translateX(-100%);
-}
-
+html, body {
+    width: 100%;
+    height: 100%;
+    background: rgb(38 70 83);
+    /* remove the extra whites around */
+    font-family: 'Roboto', sans-serif;
+  }
+  
 html {
 
     box-sizing: border-box;
-    --bgColorMenu : #1d1d27;
+    --bgColorMenu : #2a9d8f;
     --duration: .7s;
 
 }
@@ -91,7 +26,8 @@ body{
 
     margin: 0;
     display: flex;
-    height: 100vh;
+    height: 100%;
+    width: 100%;
     overflow: hidden;
     align-items: center;
     justify-content: center;
@@ -106,13 +42,12 @@ body{
 
     display: flex;
     /* Works well with 100% width  */
-    width: 150%;
+    width: 100%;
     font-size: 1.5em;
     padding: 0 2.85em;
-    position: relative;
-    align-items: center;
-    justify-content: center;
-    background-color: var(--bgColorMenu);
+    position: fixed;
+    bottom: 0%;
+    background-color: #2a9d8f;
 
 }
 
@@ -124,7 +59,7 @@ body{
     display: flex;
     cursor: pointer;
     position: relative;
-    border-radius: 50%;
+    border-radius: 100%;
     align-items: center;
     will-change: transform;
     justify-content: center;
@@ -142,7 +77,7 @@ body{
     border-radius: 50%;
     position: absolute;
     transform: scale(0);
-    transition: background-color var(--duration), transform var(--duration);
+    transition: background-color #2a9d8f, transform #2a9d8f;
 
 }
 
@@ -163,7 +98,7 @@ body{
 .icon{
 
     width: 2.6em;
-    height: 2.6em;
+    height: 3.6em;
     stroke: white;
     fill: transparent;
     stroke-width: 1pt;
@@ -193,13 +128,13 @@ body{
 .menu__border{
 
     left: 0;
-    bottom: 99%;
+    bottom: 100%;
     width: 10.9em;
     height: 2.4em;
     position: absolute;
     clip-path: url(#menu);
     will-change: transform;
-    background-color: var(--bgColorMenu);
+    background-color:#2a9d8f;
     transition: transform var(--timeOut , var(--duration));
 
 }
@@ -221,11 +156,13 @@ div#app .wrapper {
   display: flex;
   max-width: 544px;
   flex-wrap: wrap;
-  padding-top: 0px;
+  padding-top: 0%;
+  
+  
 }
 div#app .card {
-  box-shadow: rgba(0, 0, 0, 0.117647) 0px 1px 6px, rgba(0, 0, 0, 0.117647) 0px 1px 4px;
-  max-width: 124px;
+  box-shadow: #d8e2dc 0px 1px 6px, #d8e2dc 0px 1px 4px;
+  max-width: 144px;
   margin: 12px;
   transition: 0.15s all ease-in-out;
 	width: 76px;
@@ -239,10 +176,4 @@ div#app .card:hover {
 }
 
 
-
-div#app .box {
-  width: 200px;
-  height: 140px;
-  border: 1px solid rgba(0, 0, 0, 0.12);
-}
 
